# executor-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  hackathon_tracks_and_prizes.md  project_overview.md  skills-lock.json
agent/: .env.example  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
agent/agents/: __init__.py  deadline_agent.py
agent/auth/: security.py
agent/documents/: __init__.py  bank_statement.py  creditor_notice.py  deed.py  pdf_reader.py  router.py  will.py
agent/evals/: __init__.py  deadline_next_steps_quality.py
agent/llm/: __init__.py  claude.py  embeddings.py
agent/notify/: email.py
agent/observability/: arize.py  phoenix.py
agent/prompts/: extraction.py  letters.py  system.py
agent/researcher/: __init__.py  research_agent.py
agent/rules/: __init__.py  california_probate.py
agent/schemas/: __init__.py  api.py  auth.py  documents.py  estate.py
agent/seed/: __init__.py  demo_estate.py
agent/store/: __init__.py  redis_client.py
agent/tests/: conftest.py  test_california_probate_rules.py  test_chat_rag.py  test_deadline_agent.py  test_deadline_evaluator.py  test_letter_generation.py  test_observability.py  test_research_agent.py
docs/: browserbase-property-lookup.md  database.md  estate_backend_approach.md  evaluations.md  onboarding_document_workflow_test_plan.md  project_structure.md  workstreams.md
example documents/: README.md
team/: member1-document-intelligence.md  member2-data-layer.md  member3-deadline-agent.md  member4-frontend-chat-voice.md
tests/: conftest.py  tsconfig.web.json  (+2 more)
(+79 files in other folders)
