[project]
name = "clearpath-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # AI
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # Observability
    "arize-otel",
    "openinference-instrumentation-anthropic>=0.1.0",
    "opentelemetry-sdk>=1.42.1",

    # Data & validation
    "pydantic>=2.7.0",
    "email-validator>=2.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",

    # Auth
    "bcrypt>=4.0.0",

    # Document processing
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",

    # Redis
    "redis>=5.0.0",
    "upstash-redis>=1.0.0",
    "upstash-vector>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
